--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "guzzlehttp/guzzle": "^6.2|^7.0",
         "illuminate/mail": "^7.0|^8.0|^9.0",
-        "sendinblue/api-v3-sdk": "^7.4.4"
+        "sendinblue/api-v3-sdk": "8.x.x"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.0"
